# jazzmate

./: Core.hs  MIDIBridge.hs  Main.hs  README.md  TODO  TODO.md  jack_midi_example.hs  jazzmate.cabal  monadic_tunnelling_example.hs  scalehs.cabal  scales.hs
src/: Core.hs  Main.hs  MusicTheory.hs  Test.hs
src/GUI/: Main.hs  Render.hs  Theme.hs
src/MIDI/: ALSA.hs  Dummy.hs  JACK.hs  JackBridge.hs
