Name:                JazzMate
Version:             0.2.4
Description:         Live Scale and Chord Utility for Piano Players
License:             GPL
License-file:        LICENSE
Author:              Hannes Gräuler
Maintainer:          hgraeule@uos.de
Build-Type:          Simple
Cabal-Version:       >=1.2

Flag JACK
  Description:       Enable JACK support (requires jack bindings 0.6)
  Default:           False

Flag ALSA
  Description:       Enable ALSA support
  Default:           True

Test-Suite test-jazzmate
  Type:              exitcode-stdio-1.0
  Main-is:           Test.hs
  Hs-Source-Dirs:    src
  Build-Depends:     base, QuickCheck

Executable jazzmate
  Main-is:           Main.hs
  Hs-Source-Dirs:    src
  Extensions:        CPP
  Build-Depends:     base >= 3 && < 5, containers, mtl, stm, random
  Build-Depends:     midi, gtk, cairo, colour
  Ghc-Options:       -threaded

  if flag(ALSA)
    Cpp-Options:     -DUSE_ALSA
    Build-Depends:   alsa-seq, alsa-core, midi-alsa

  if flag(jack)
    Cpp-Options:     -DUSE_JACK
    Build-Depends:   jack >= 0.6
