Name:                scalehs
Version:             0.2.1
Description:         Scale and Chord Utility for Piano Players
License:             GPL
License-file:        LICENSE
Author:              Hannes Gräuler
Maintainer:          hgraeule@uos.de
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable scalehs
  Main-is:           Main.hs
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 3 && < 5, containers, mtl, midi, jack >= 0.6, gtk, cairo, colour

